--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,55 @@
+# Node modules
 node_modules/
+
+# Build output
+.next/
+out/
+
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# dotenv environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Optional: Ignore local VS Code settings (customize as needed)
+.vscode/*
+!.vscode/settings.json
+!.vscode/launch.json
+!.vscode/extensions.json
+
+# Optional: OS-specific files
+.DS_Store
+Thumbs.db
+
+# Dependency directories
+package-lock.json
+yarn.lock
+pnpm-lock.yaml
+
+# Coverage directory used by testing tools
+coverage/
+
+# Next.js export artifacts
+export/
+
+# TypeScript cache
+*.tsbuildinfo
+
+# ESLint cache
+.eslintcache
+
+# Optional: Ignore storybook build (if used)
+storybook-static/
+
+# Optional: Ignore vercel CLI output
+.vercel/output/
+
+# Optional: Ignore local preview build
+.next/standalone/
